<?xml version="1.0" encoding="utf-8"?>
<!--
     Chris, Tony, Gurpreet, Dylan, Dustin, Maria| This is the resource file for the strings we will be user|
		5/15/13
-->
<resources>

    <!-- Global strings -->
    <string name="dontsend">Cancel</string>
    <string name="okBtn">Ok</string>

    <!-- Main menu Strins -->
    <string name="menu_play_game">Play</string>
    <string name="menu_extra_btn">Extras</string>
    <string name="menu_donate_btn">Donate</string>

    <!-- Extras menu -->
    <string name="extra_credits_btn">About</string>
    <string name="extra_feedback_btn">Feed Back</string>
    <string name="extra_privacypolicy_btn">Privacy Policy</string>
    <string name="privacy_policy_text">We will not keep your personal information.\n
									  We will not store your personal information.\n
									  We will not share your personal information.\n
									  If you email us a bug report, we will keep it confidential and delete your personal information. </string>
    <string name="about_app_text" formatted="false">MANY MOTHER’S AND DAUGHTER’S WILL SPEND 3\n
								HOURS A DAY TO RETRIEVE WATER\n
								FOR THEIR FAMILIES. THIS WATER CAN BE DISEASE\n
								RIDDEN CAUSING DEHYDRATION, DIARRHEA,\n
								AND DEATH. ABOUT EVERY 19 SECONDS A PARENT LOSES\n
								THEIR CHILD DUE TO UNCLEAN WATER RELATED\n
								DEATHS.\n\n
								ABOUT $20 CAN PROVIDE ONE PERSON ACCESS TO\n
								CLEAN WATER. AVAILABLE CLEAN WATER WILL HELP\n
								WARD OFF DEATH FROM DISEASE, GROW AN\n
								ECONOMY AND RAISE ATTENDANCE IN SCHOOL.\n\n
								THE GIVING CHILD IS INVITING YOU TO MAKE A\n
								POSITIVE IMPACT ON THE UNCLEAN WATER CRISIS BY\n
								PLAYING REVOLUTION: H2O. 90% OF PROFITS WILL GO\n
								TOWARDS CLEAN WATER PROJECTS WHILE THE OTHER\n
								10% GOES TOWARD BUILDING FUTURE PROJECTS FOR\n
								THE GIVING CHILD.</string>

    <!-- Bug reporting activity -->
    <string name="userbug_subject_title">Subject</string>
    <string name="userbug_subject_hint">I have a problem with ....</string>
    <string name="userbug_relatedto_title">What is your feedback related to?</string>
    <string name="userbug_body_title">Body</string>
    <string name="userbug_body_hint">Describe the problem you are having</string>
    <string name="sysbug_error_code">Error Code:</string>
    <string name="sysbug_error_descript">Description:</string>

    <string-array name="userbug_relatedto_spinner">
        <item>General feedback</item>
        <item>Animations</item>
        <item>Menus</item>
        <item>Sounds</item>
    </string-array>

    <string name="send">Compose</string>

    <!-- app name strings and activity name strings -->
    <string name="app_name">Revolution:H2O</string>
    <string name="app_label">Revolution:H2O</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mini_game_selection">MiniGame_selection</string>
    <string name="title_activity_extras_menu">Extras_menu</string>
    <string name="title_activity_error_dialog"></string>
    <string name="title_about">About The Giving Child</string>
    <string name="title_privacy">The Giving Child Privacy Policy</string>

</resources>