<?xml version="1.0" encoding="utf-8"?>
<!-- Chris, Maria, Tony, Gurpreet, Dylan, Dustin | This is the form for a user bug report| 5/16/13 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userbug_subject_title" />

            <EditText
                android:id="@+id/userbug_sub"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userbug_subject_hint"
                android:nextFocusForward="@+id/userbug_related_list"
                android:scrollHorizontally="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userbug_relatedto_title" />

            <Spinner
                android:id="@+id/userbug_related_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/userbug_body"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userbug_body_title" />

        <EditText
            android:id="@+id/userbug_body"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/userbug_body_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:scrollHorizontally="false"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/userbug_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send" />

            <Button
                android:id="@+id/userbug_cancle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dontsend" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>