<?xml version="1.0" encoding="utf-8"?>
<!-- Chris, Maria, Dustin, Dylan, Gurpreet, Tony | This is for displaying a system error in the bug report | 5/17/13 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content">
    	
    	<TextView
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:text="@string/sysbug_error_code"/>

    	<TextView
    	    android:id="@+id/systemBug_errorCode"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:paddingLeft="5dp"
    	    android:text="Temp Text" />
    </LinearLayout>


    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content">

    	<TextView
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:text="@string/sysbug_error_descript"/>

    	<TextView
    	    android:id="@+id/systemBug_errorDescription"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="Tempt text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/systemBug_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okBtn" />
    </LinearLayout>

</LinearLayout>