<!-- Chris Card | this is the main menu for the app contains play and other things | 5/14/13 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameLauncher" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:id="@+id/main_layout">

        <Button
            android:id="@+id/playGame"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:onClick="openMiniGames"
            android:paddingBottom="9dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/menu_play_game" />

        <Button
            android:id="@+id/extraBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:onClick="openExtras"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="9dp"
            android:text="@string/menu_extra_btn" />

        <Button
            android:id="@+id/donateBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:onClick="openDonate"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="9dp"
            android:text="@string/menu_donate_btn" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/muting"
        android:background="@null"
        android:src="@drawable/unmuted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="toggleMute"/>

</RelativeLayout>